src/style/base/_base.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  // list-style: none;
  text-decoration: none;
  outline: none;
  text-transform: capitalize;
}

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

html {
  scroll-behavior: smooth;
}

body {
  background: #fff;
  color: #333;
  overflow-x: hidden;
  font-family: $font-secondary;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

